--- a/chainstate/types/Cargo.toml
+++ b/chainstate/types/Cargo.toml
@@ -16,3 +16,4 @@ crypto = { path = "../../crypto" }
 thiserror.workspace = true
 parity-scale-codec.workspace = true
 generic-array = "0.14"
+crypto-bigint = "0.4"
