--- a/consensus/Cargo.toml
+++ b/consensus/Cargo.toml
@@ -14,6 +14,7 @@ utxo = {path = '../utxo'}
 
 thiserror.workspace = true
 num = "0.4.0"
+crypto-bigint = "0.4"
 
 [dev-dependencies]
 rstest = "0.16"
