--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ members = [
   "utils",                        # Various utilities.
   "utxo",                         # Utxo and related utilities (cache, undo, etc.).
   "wallet",                       # Wallet executable.
+  "wasm_crypto",                  # WASM bindings for the crypto crate.
 ]
 
 default-members = [
