--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,6 +100,8 @@ thiserror = "1.0"
 tokio = "1.0"
 once_cell = "1.13"
 
+rstest = "0.17"
+
 [profile.dev]
 panic = "abort" # prevent panic catching (mostly for the tokio runtime)
 
