--- a/chainstate/test-suite/Cargo.toml
+++ b/chainstate/test-suite/Cargo.toml
@@ -28,5 +28,5 @@ hex.workspace = true
 itertools.workspace = true
 
 [dev-dependencies]
-rstest = "0.17"
+rstest.workspace = true
 expect-test = "1.3"
