--- a/wallet/storage/Cargo.toml
+++ b/wallet/storage/Cargo.toml
@@ -20,4 +20,4 @@ test-utils = {path = '../../test-utils'}
 utils = { path = '../../utils' }
 crypto = { path = '../../crypto' }
 
-rstest = "0.17"
+rstest.workspace = true
