--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -7,13 +7,23 @@ rust-version.workspace = true
 
 [dependencies]
 logging = {path = '../logging'}
+crypto = { path = "../crypto/" }
 
 atomic-traits = "0.3"
 num-traits = "0.2"
 slave-pool = "0.2"
+probabilistic-collections = "0.7.0"
 
 [dev-dependencies]
+test-utils = { path = "../test-utils" }
+
 static_assertions.workspace = true
+criterion = "0.3"
+rstest.workspace = true
 
 [target.'cfg(loom)'.dependencies]
 loom = "0.5"
+
+[[bench]]
+name = "benches"
+harness = false
