--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -10,6 +10,7 @@ authors = ["Samer Afach <samer.afach@mintlayer.org>", "Ben Marsh <benjamin.marsh
 
 [dependencies]
 serialization = { path = "../serialization" }
+
 secp256k1 = { version = "0.27", default-features = false, features = ["global-context", "rand-std"] }
 hmac = "0.12"
 bip39 = { version = "2.0", default-features = false, features = ["std", "zeroize"] }
@@ -18,18 +19,19 @@ sha2 = "0.10"
 sha3 = "0.10"
 ripemd = "0.1"
 blake2 = "0.10"
-generic-array = "0.14"
 rand = "0.8"
-parity-scale-codec.workspace = true
 num = "0.4"
 num-derive = "0.3"
 num-traits = "0.2"
 chacha20poly1305 = "0.10"
-thiserror.workspace = true
 schnorrkel = "0.10.2"
 merlin = { version = "3.0", default-features = false }
 argon2 = { version = "0.5", features = ["std"] }
 zeroize = "1.5"
+
+generic-array.workspace = true
+parity-scale-codec.workspace = true
+thiserror.workspace = true
 
 [dev-dependencies]
 test-utils = { path = "../test-utils" }
