Add generate_block RPC call to blockprod

--- a/blockprod/Cargo.toml
+++ b/blockprod/Cargo.toml
@@ -14,11 +14,13 @@ common = { path = "../common/" }
 consensus = { path = "../consensus" }
 crypto = { path = "../crypto/" }
 mempool = { path = "../mempool/" }
+serialization = { path = "../serialization" }
 subsystem = { path = "../subsystem/" }
 logging = {path = '../logging'}
 utils = {path = '../utils'}
 rpc = { path = "../rpc/" }
 
+hex.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, default-features = false, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
 futures.workspace = true
