--- a/wallet/wallet-node-client/Cargo.toml
+++ b/wallet/wallet-node-client/Cargo.toml
@@ -12,8 +12,8 @@ serialization = {path = "../../serialization"}
 async-trait.workspace = true
 thiserror.workspace = true
 
+jsonrpsee = { version = "0.16" }
 serde_json = "1.0"
-ureq = { version = "2.1", features = ["json"] }
 
 [dev-dependencies]
 chainstate = { path = "../../chainstate/" }
