--- a/blockprod/Cargo.toml
+++ b/blockprod/Cargo.toml
@@ -26,6 +26,7 @@ futures.workspace = true
 jsonrpsee = { workspace = true, features = ["macros"] }
 parity-scale-codec.workspace = true
 slave-pool = "0.2"
+serde = { workspace = true, features = ["derive"] }
 thiserror.workspace = true
 tokio = { workspace = true, default-features = false, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
 void = "1.0"
