--- a/wallet/storage/Cargo.toml
+++ b/wallet/storage/Cargo.toml
@@ -9,6 +9,7 @@ rust-version.workspace = true
 
 [dependencies]
 common = { path = '../../common' }
+crypto = { path = "../../crypto" }
 serialization = { path = "../../serialization" }
 storage = { path = '../../storage', features = ['inmemory'] }
 storage-sqlite = { path = "../../storage/sqlite" }
@@ -18,6 +19,5 @@ wallet-types = { path = '../types' }
 [dev-dependencies]
 test-utils = {path = '../../test-utils'}
 utils = { path = '../../utils' }
-crypto = { path = '../../crypto' }
 
 rstest.workspace = true
