--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -8,19 +8,18 @@ rust-version.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# Local dependencies
-blockprod = { path = "../blockprod/" }
-common = { path = "../common/" }
+blockprod = { path = "../blockprod" }
 chainstate = { path = "../chainstate" }
 chainstate-launcher = { path = "../chainstate/launcher" }
-logging = { path = "../logging/" }
-mempool = { path = "../mempool/" }
-p2p = { path = "../p2p/" }
-rpc = { path = "../rpc/" }
-subsystem = { path = "../subsystem/" }
+common = { path = "../common" }
+logging = { path = "../logging" }
+mempool = { path = "../mempool" }
+p2p = { path = "../p2p" }
+rpc = { path = "../rpc" }
 storage-lmdb = { path = "../storage/lmdb" }
+subsystem = { path = "../subsystem" }
+utils = { path = "../utils" }
 
-# External dependencies
 anyhow = "1.0"
 clap = { version = "4", features = ["derive"] }
 jsonrpsee = { workspace = true, features = ["macros"] }
