--- a/wallet/wallet-cli/Cargo.toml
+++ b/wallet/wallet-cli/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 common = { path = "../../common" }
 logging = { path = "../../logging" }
 node-comm = { path = "../wallet-node-client" }
+serialization = { path = "../../serialization" }
 utils = { path = "../../utils" }
 wallet = { path = ".." }
 wallet-storage = { path = '../storage' }
