--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,8 +44,9 @@ members = [
   "test-utils",                   # Various utilities for tests.
   "utils",                        # Various utilities.
   "utxo",                         # Utxo and related utilities (cache, undo, etc.).
-  "wallet",                       # Wallet executable.
+  "wallet",                       # Wallet primitives.
   "wallet/wallet-node-client",    # Wallet-to-node communication tools.
+  "wallet/wallet-controller",     # Common code for wallet UI applications.
   "wallet/wallet-cli",            # Wallet CLI/REPL.
   "wasm-crypto",                  # WASM bindings for the crypto crate.
 ]
