Add more commands to wallet-cli

--- a/wallet/wallet-node-client/Cargo.toml
+++ b/wallet/wallet-node-client/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 chainstate = { path = "../../chainstate" }
 common = { path = "../../common" }
+node = { path = "../../node" }
+p2p = { path = "../../p2p" }
 rpc = { path = "../../rpc" }
 serialization = { path = "../../serialization" }
 subsystem = { path = "../../subsystem" }
