--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,7 +94,7 @@ license = "MIT"
 
 [workspace.dependencies]
 async-trait = "0.1"
-futures = "0.3"
+futures = { version = "0.3", default-features = false }
 generic-array = "0.14"
 hex = "0.4"
 itertools = "0.10"
@@ -104,7 +104,7 @@ parity-scale-codec = "3.1"
 serde = "1.0"
 static_assertions = "1.1"
 thiserror = "1.0"
-tokio = "=1.26" # Use older tokio until fixed jsonrpsee is released, see https://github.com/paritytech/jsonrpsee/pull/1062
+tokio = { version = "=1.26", default-features = false } # Use older tokio until fixed jsonrpsee is released, see https://github.com/paritytech/jsonrpsee/pull/1062
 
 rstest = "0.17"
 
