--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,13 +98,13 @@ futures = { version = "0.3", default-features = false }
 generic-array = "0.14"
 hex = "0.4"
 itertools = "0.10"
-jsonrpsee = "0.16"
+jsonrpsee = "0.17"
 once_cell = "1.13"
 parity-scale-codec = "3.1"
 serde = "1.0"
 static_assertions = "1.1"
 thiserror = "1.0"
-tokio = { version = "=1.26", default-features = false } # Use older tokio until fixed jsonrpsee is released, see https://github.com/paritytech/jsonrpsee/pull/1062
+tokio = { version = "1.27", default-features = false } # Use older tokio until fixed jsonrpsee is released, see https://github.com/paritytech/jsonrpsee/pull/1062
 
 rstest = "0.17"
 
