--- a/chainstate/Cargo.toml
+++ b/chainstate/Cargo.toml
@@ -28,6 +28,7 @@ jsonrpsee = { workspace = true, features = ["macros"] }
 thiserror.workspace = true
 mockall = "0.11"
 serde_json = "1.0"
+serde = { workspace = true, features = ["derive"] }
 static_assertions.workspace = true
 tokio.workspace = true
 
