--- a/wallet/wallet-cli/Cargo.toml
+++ b/wallet/wallet-cli/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2021"
 
 [dependencies]
 common = { path = "../../common" }
+logging = { path = "../../logging" }
 serialization = { path = "../../serialization" }
 utils = { path = "../../utils" }
 wallet = { path = ".." }
 wallet-controller = { path = "../wallet-controller" }
-wallet-storage = { path = '../storage' }
+wallet-storage = { path = "../storage" }
 
 clap = { version = "4", features = ["derive"] }
 crossterm = "0.26"
