--- a/node-gui/Cargo.toml
+++ b/node-gui/Cargo.toml
@@ -6,10 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chainstate = { path = "../chainstate" }
 common = { path = '../common' }
 logging = { path = "../logging" }
 node-lib = { path = "../node-lib" }
 subsystem = { path = "../subsystem" }
+utils = { path = "../utils" }
 
 anyhow = "1.0"
 iced = { version = "0.9", features = ["canvas", "debug", "tokio"] }
