--- a/p2p/Cargo.toml
+++ b/p2p/Cargo.toml
@@ -7,7 +7,7 @@ rust-version.workspace = true
 
 [features]
 default = []
-testing_utils = ["dep:rlimit", "dep:ctor", "dep:test-utils"]
+testing_utils = ["dep:test-utils"]
 
 [dependencies]
 chainstate = { path = "../chainstate/" }
@@ -24,14 +24,12 @@ utils = { path = "../utils/" }
 
 async-trait.workspace = true
 bytes = "1.1"
-ctor = { version = "0.2", optional = true}
 futures.workspace = true
 hex.workspace = true
 itertools.workspace = true
 jsonrpsee = { workspace = true, features = ["macros"] }
 once_cell.workspace = true
 parity-scale-codec.workspace = true
-rlimit = { version = "0.9", optional = true}
 serde.workspace = true
 siphasher = "0.3"
 snowstorm = "0.4"
