--- a/p2p/backend-test-suite/Cargo.toml
+++ b/p2p/backend-test-suite/Cargo.toml
@@ -7,7 +7,7 @@ rust-version.workspace = true
 
 [dependencies]
 common = { path = "../../common" }
-p2p = { path = "../../p2p", features = ["testing_utils"] }
+p2p = { path = "../../p2p" }
 p2p-test-utils = { path = "../p2p-test-utils" }
 logging = { path = "../../logging" }
 serialization = { path = "../../serialization" }
