--- a/consensus/Cargo.toml
+++ b/consensus/Cargo.toml
@@ -6,12 +6,13 @@ edition.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-chainstate-types = {path = '../chainstate/types'}
-common = {path = '../common'}
-crypto = {path = '../crypto'}
-pos_accounting = {path = '../pos_accounting'}
-utils = {path = "../utils"}
-utxo = {path = '../utxo'}
+chainstate-types = { path = '../chainstate/types' }
+common = { path = '../common' }
+crypto = { path = '../crypto' }
+pos_accounting = { path = '../pos_accounting' }
+serialization = { path = "../serialization" }
+utils = { path = "../utils" }
+utxo = { path = '../utxo' }
 
 thiserror.workspace = true
 itertools.workspace = true
