--- a/chainstate/test-framework/Cargo.toml
+++ b/chainstate/test-framework/Cargo.toml
@@ -14,6 +14,7 @@ chainstate-types = { path = '../types' }
 common = { path = '../../common' }
 crypto = { path = '../../crypto' }
 pos_accounting = {path = '../../pos_accounting'}
+serialization = {path = "../../serialization"}
 test-utils = {path = '../../test-utils' }
 tx-verifier = { path = '../tx-verifier' }
 utils = { path = '../../utils' }
