--- a/wallet/wallet-node-client/Cargo.toml
+++ b/wallet/wallet-node-client/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+blockprod = { path = "../../blockprod" }
 chainstate = { path = "../../chainstate" }
 common = { path = "../../common" }
 node-lib = { path = "../../node-lib" }
@@ -13,15 +14,14 @@ p2p = { path = "../../p2p" }
 rpc = { path = "../../rpc" }
 serialization = { path = "../../serialization" }
 subsystem = { path = "../../subsystem" }
-tower = "0.4"
 
 async-trait.workspace = true
-jsonrpsee.workspace = true
-thiserror.workspace = true
-
-serde_json = "1.0"
-http = "0.2"
 base64 = "0.21"
+http = "0.2"
+jsonrpsee.workspace = true
+serde_json = "1.0"
+thiserror.workspace = true
+tower = "0.4"
 
 [dev-dependencies]
 chainstate-storage = { path = "../../chainstate/storage" }
