--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -11,6 +11,7 @@ rust-version.workspace = true
 common = { path = "../common" }
 crypto = { path = "../crypto/" }
 logging = { path = "../logging" }
+pos_accounting = { path = "../pos_accounting" }
 serialization = { path = "../serialization" }
 storage = { path = "../storage", features = ["inmemory"] }
 utils = { path = "../utils" }
