Small refactor for Wallet password encryption
- new wallet/storage/password module
- remove Option from unlock private keys password
- return error if already unlocked or trying to lock without a password
- documentation on few methods

--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -16,10 +16,10 @@ num-traits = "0.2"
 probabilistic-collections = "0.7"
 qrcodegen = "1.8"
 slave-pool = "0.2"
-zeroize = "1.5"
 
 thiserror.workspace = true
 parity-scale-codec.workspace = true
+zeroize.workspace = true
 
 [dev-dependencies]
 test-utils = { path = "../test-utils" }
