--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,6 +110,7 @@ serde = "1.0"
 static_assertions = "1.1"
 thiserror = "1.0"
 tokio = { version = "1.27", default-features = false }
+zeroize = "1.5"
 
 rstest = "0.17"
 
