--- a/wallet/types/Cargo.toml
+++ b/wallet/types/Cargo.toml
@@ -14,7 +14,7 @@ serialization = { path = "../../serialization" }
 storage = { path = '../../storage', features = ['inmemory'] }
 
 bip39 = { version = "2.0", default-features = false, features = ["std", "zeroize"] }
-zeroize = "1.5"
+zeroize.workspace = true
 thiserror.workspace = true
 parity-scale-codec.workspace = true
 
