--- a/wallet/wallet-cli-lib/Cargo.toml
+++ b/wallet/wallet-cli-lib/Cargo.toml
@@ -36,3 +36,5 @@ p2p = { path = "../../p2p" }
 rpc = { path = "../../rpc" }
 subsystem = { path = "../../subsystem" }
 test-utils = { path = "../../test-utils" }
+
+rstest.workspace = true
